tests/NormalTests/paczka1/fuzzy1/47603378.err
Error in line 2: xmXdPz1lF A941 14,6
Error in line 12: A941 A941 73,7
Error in line 14: A941 A941 ,3
Error in line 13: A941 S672 41,3
Error in line 16: FovbMJ0 S295 67,0
Error in line 9: 4uC S672 41,2
Error in line 20: 4uC S295 78,4
Error in line 29: 4uC A941 72,7
Error in line 28: ojPkhZq S672 32,5
Error in line 26: xmXdPz1lF S672 89,6
